# CBC2023CRC

./: .gitignore  LICENSE  README.md  pyproject.toml
classfication/: 2023-07-21-11-03.csv  class_indices.json  classification_performance.py  data.py  deal.py  loss.py  network_multi_label.py  test.py  train.py  utils.py
docker/: Dockerfile  README.md  convert_img.py  run.sh  test_cbc.py
docker/config/: config_test_general.py
docker/models/: layers.py  network.py
segmentation/: loss.py  main.py  opt.py  test_cbc.py  test_cbc_with_eval.py
segmentation/Preprocessing/: IlluminationCorrection.py  ImageResize.py  genFakeSample.py  generate_cmap_base_label.py  generate_shuffled_data.py  generate_shuffled_data_ukbb.py  generate_shuffled_joint_augmentation.py
segmentation/Tools/: data_augmentation.py  utils.py
segmentation/config/: config_test_general.py  config_train_general.py
segmentation/models/: layers.py  network.py  sw_gan.py
